small update in the abstract. Krista please let me know if this sounds rights?

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -9646,6 +9646,23 @@
   file = {/Users/nidhivinod/Zotero/storage/Q7ZJPBQY/Roberts et al. - 1990 - Stomatal and Boundary-Layer Conductances in an Ama.pdf}
 }
 
+@article{rodenEffectLeafFlutter1993,
+  title = {Effect of Leaf Flutter on the Light Environment of Poplars},
+  author = {Roden, John S. and Pearcy, Robert W.},
+  date = {1993-03},
+  journaltitle = {Oecologia},
+  volume = {93},
+  number = {2},
+  pages = {201--207},
+  issn = {0029-8549, 1432-1939},
+  doi = {10.1007/BF00317672},
+  url = {http://link.springer.com/10.1007/BF00317672},
+  urldate = {2022-01-18},
+  abstract = {The dynamics of the canopy light environment for two poplar species (Populus tremuloides Michx., and P. fremontii Wats.) were characterized with an array of photocells in fixed positions within the canopy or attached directly to leaves and using a data logger that recorded photon flux density (PFD) at frequencies from 1 to 20 Hz. The majority of sunflecks were short in duration ( {$<$} 1 s) with a similar short interval between sunflecks. Sunflecks contribute as much as 90\% of the total daily PFD in the lower canopy. Leaf flutter may cause high frequency (3 to 5 Hz) variations of PFD in poplar canopies. The amount of light intercepted by a fluttering leaf at the top of the canopy decreased with increasing flutter, whereas a fluttering lower canopy leaf showed no such trend. When leaves fluttered at the top of the canopy the understory light environment showed an increased number of shorter sunflecks. Leaf flutter may increase mean PFD for understory leaves. It also creates a canopy light environment that is more dynamic temporally and more evenly distributed spatially. The potential benefits of these changes in light dynamics are discussed.},
+  langid = {english},
+  file = {/Users/nidhivinod/Zotero/storage/AHSU55BR/Roden and Pearcy - 1993 - Effect of leaf flutter on the light environment of.pdf}
+}
+
 @article{rohdeBerkeleyEarthLand2020,
   title = {The {{Berkeley Earth Land}}/{{Ocean Temperature Record}}},
   author = {Rohde, Robert A. and Hausfather, Zeke},
@@ -12884,6 +12901,23 @@
   doi = {10.2307/2437823},
   abstract = {This paper is an analysis of structural and volumetric differences among leaves from ten species of woody dicotyledons, represented by solitary deciduous trees, and collected from three stations in the crown of each,-A, south periphery, B, north periphery, and C, interior of crown. Material was studied from both transverse and paradermal sections; vascularization was measured in terms of vein-spacing; nonvascular tissues were placed in two groups on the basis of their probable relations to translocation in the plane of the blade, and their relative volumes recorded as tissue-ratios; the distribution of vein-extensions was given in terms of their spacing in the blade; ratios between the mean spacing of vein-extensions and veins was recorded for each station; all data are summarized in table 1. Most of the sun leaves were somewhat xeromorphic but interior leaves were greatly modified and several gave evidence of abnormal development; those at station B were intermediate but more like leaves at A; the range through the series and stations illustrate numerous steps in tissue specialization and in transition from xeromorphic to mesomorphic organization. The mean volume of blade tissues measured from transections, declined 54 per cent through the stations, but the mean percentile volume of each in terms of local blade thickness, showed differences; while the mean percentile volume of the palisade declined 13 per cent, the spongy mesophyll increased 4 per cent and total epidermal thickness increased 6 per cent at the shaded stations. The palisade cells in sun leaves were generally in partial contact in the plane of the blade, but there was considerable lateral dissociation of its cells in the shaded leaves; this lateral freedom is possible because palisade cells are anchored above and below to adjacent tissues; their cells were also greatly shortened. Cells of the spongy mesophyll retained their lateral contacts through the stations and tend to lengthen their connectives in the shaded leaves. These lateral arms favor the meshed-cell-structure characteristic of this tissue which doubtless promotes translocation between veins and to contiguous tissues of the blade. When the upper layer of the spongy mesophyll is strongly meshed this shifts the lower ends of attached palisade cells and thus extends major intercellular spaces into the adjacent portion of that tissue. Regardless of cell trends in the mesophyll these lateral connectives and associated specializations constitute tendencies distinguishing between palisade and spongy mesophyll. Vein spacing widened consistently at the shaded stations, and, with one exception, the tissue-ratios also increased with shading, but abnormal relations in the nonvascular tissues appeared in half of them at station C. The distribution of vein-extensions varied greatly among the species with widest separation when associated most closely with major veins. The ratios between vein-extension-spacing and vein-spacing were fairly uniform for each species but differed greatly among the several species. Of special interest were the nearly equal means for these ratios at the three stations. Within the limits of the material here surveyed, this suggests a functional relationship between these two leaf structures when closely associated, as in these mesomorphic leaves. However, the varied distribution of vein-extensions and their extreme separation or lack in other dicotyledonous leaves show that broader surveys and experimental work are needed to clarify their place in foliar organization. The marked range in structure between sun and shade leaves from the same plant illustrates a striking capacity for modification during ontogeny. Because the amount of light reaching shaded leaves is drastically reduced during their growth, directives are constantly shifted, particularly during the period of leaf expansion. Evidence of abnormal development at the deeply shaded stations was noted in half of the species studied. This appears to disturb their vascularization and spacing of vein-extensions less than their nonvascular tissues. It seems probable that relations between blade tissues and their vascularization in deep shade may not be comparable with those in sun leaves. This suggests that lower correlations might be expected among leaves of unequal illumination as compared with those found among sun leaves.},
   file = {/Users/nidhivinod/Zotero/storage/GUFJKDY8/Wylie - 1951 - Principles of Foliar Organization Shown by Sun-Sha.pdf}
+}
+
+@article{wyliePrinciplesFoliarOrganization1951a,
+  title = {Principles of {{Foliar Organization Shown}} by {{Sun-Shade Leaves}} from {{Ten Species}} of {{Deciduous Dicotyledonous Trees}}},
+  author = {Wylie, Robert B.},
+  date = {1951},
+  journaltitle = {American Journal of Botany},
+  volume = {38},
+  number = {5},
+  eprint = {2437823},
+  eprinttype = {jstor},
+  pages = {355--361},
+  publisher = {{Botanical Society of America}},
+  issn = {0002-9122},
+  doi = {10.2307/2437823},
+  abstract = {This paper is an analysis of structural and volumetric differences among leaves from ten species of woody dicotyledons, represented by solitary deciduous trees, and collected from three stations in the crown of each,-A, south periphery, B, north periphery, and C, interior of crown. Material was studied from both transverse and paradermal sections; vascularization was measured in terms of vein-spacing; nonvascular tissues were placed in two groups on the basis of their probable relations to translocation in the plane of the blade, and their relative volumes recorded as tissue-ratios; the distribution of vein-extensions was given in terms of their spacing in the blade; ratios between the mean spacing of vein-extensions and veins was recorded for each station; all data are summarized in table 1. Most of the sun leaves were somewhat xeromorphic but interior leaves were greatly modified and several gave evidence of abnormal development; those at station B were intermediate but more like leaves at A; the range through the series and stations illustrate numerous steps in tissue specialization and in transition from xeromorphic to mesomorphic organization. The mean volume of blade tissues measured from transections, declined 54 per cent through the stations, but the mean percentile volume of each in terms of local blade thickness, showed differences; while the mean percentile volume of the palisade declined 13 per cent, the spongy mesophyll increased 4 per cent and total epidermal thickness increased 6 per cent at the shaded stations. The palisade cells in sun leaves were generally in partial contact in the plane of the blade, but there was considerable lateral dissociation of its cells in the shaded leaves; this lateral freedom is possible because palisade cells are anchored above and below to adjacent tissues; their cells were also greatly shortened. Cells of the spongy mesophyll retained their lateral contacts through the stations and tend to lengthen their connectives in the shaded leaves. These lateral arms favor the meshed-cell-structure characteristic of this tissue which doubtless promotes translocation between veins and to contiguous tissues of the blade. When the upper layer of the spongy mesophyll is strongly meshed this shifts the lower ends of attached palisade cells and thus extends major intercellular spaces into the adjacent portion of that tissue. Regardless of cell trends in the mesophyll these lateral connectives and associated specializations constitute tendencies distinguishing between palisade and spongy mesophyll. Vein spacing widened consistently at the shaded stations, and, with one exception, the tissue-ratios also increased with shading, but abnormal relations in the nonvascular tissues appeared in half of them at station C. The distribution of vein-extensions varied greatly among the species with widest separation when associated most closely with major veins. The ratios between vein-extension-spacing and vein-spacing were fairly uniform for each species but differed greatly among the several species. Of special interest were the nearly equal means for these ratios at the three stations. Within the limits of the material here surveyed, this suggests a functional relationship between these two leaf structures when closely associated, as in these mesomorphic leaves. However, the varied distribution of vein-extensions and their extreme separation or lack in other dicotyledonous leaves show that broader surveys and experimental work are needed to clarify their place in foliar organization. The marked range in structure between sun and shade leaves from the same plant illustrates a striking capacity for modification during ontogeny. Because the amount of light reaching shaded leaves is drastically reduced during their growth, directives are constantly shifted, particularly during the period of leaf expansion. Evidence of abnormal development at the deeply shaded stations was noted in half of the species studied. This appears to disturb their vascularization and spacing of vein-extensions less than their nonvascular tissues. It seems probable that relations between blade tissues and their vascularization in deep shade may not be comparable with those in sun leaves. This suggests that lower correlations might be expected among leaves of unequal illumination as compared with those found among sun leaves.},
+  file = {/Users/nidhivinod/Zotero/storage/ST7TW9WB/Wylie - 1951 - Principles of Foliar Organization Shown by Sun-Sha.pdf}
 }
 
 @article{xiangContrastingLeafTrait2013,
